--- a/menu.css
+++ b/menu.css
@@ -48,7 +48,7 @@ p{
 .return1{
     display: none;
 }
-@media (max-device-width:400px){
+@media (max-width:600px){
     .return1{
         display: block;
         background:rgba(70, 77, 172, 0);
